Changelog
---------

Version 2.3.0
~~~~~~~~~~~~~

* Fixing HDR details not being parsed due to not quoting path to ffprobe (thanks to schlotkins)
* Changing always allowing pass-through for audio

Version 2.2.0
~~~~~~~~~~~~~

* Adding custom extra ffmpeg args for HEVC
* Adding max mux queue size change for HEVC
* Fixing issue with codec not being set as copy (thanks to schlotkins)
* Fixing quotes around parens on linux

Version 2.1.1
~~~~~~~~~~~~~

* Fixing parse_hdr_details bug (thanks to Jan Temešinko and schlotkins)

Version 2.1.0
~~~~~~~~~~~~~

* Adding config file that will allow for customizable work directory
* Adding support for HEVC conversion
* Adding support for audio downmixing and custom titles
* Adding log to file
* Adding realtime logging for ffmpeg conversions
* Adding support to automatically download SVT-AV1
* Fixing windows scaling display issues
* Fixing scaling to properly keep scaling and will be red when bad
* Fixing scaling for videos with rotation
* Fixing audio to convert correct tracks
* Removing bundling of FFmpeg and SVT-AV1
* Removing support for external plugins

Version 2.0.1
~~~~~~~~~~~~~

* Fixing broken exe, requiring console for time being

Version 2.0.0
~~~~~~~~~~~~~

* Adding AV1 support (both FFMPEG libaom-av1 and SVT-AV1)
* Adding VP9 support
* Adding Visible command list
* Adding Audio transcoding options
* Changing into MIT license
* Changing into plugin module design
* Removing all GPL or restrictive licensed products (including x265)
* Major Layout Redesign

Version 1.1.0
~~~~~~~~~~~~~

* Add AV1 support
* Add GIF support
* Add Settings page
* Add About page
* Large amount of changes, fixes, and bugs introduced

Version 1.0.0
~~~~~~~~~~~~~

* Initial release