@@ -19,9 +19,10 @@ recommended_bitrates = [
     "6000k (2560x1440p @ 50,60)",
     "9000k (3840x2160p @ 24,25,30)",
     "13000k (3840x2160p @ 50,60)",
+    "Custom",
 ]
 
-recommended_crfs = [str(x) for x in range(0, 63)]
+recommended_crfs = ["34", "32", "30", "28", "26", "24", "22", "20", "Custom"]
 
 
 class AV1(QtWidgets.QWidget):
@@ -92,10 +93,15 @@ class AV1(QtWidgets.QWidget):
         self.widgets.mode.addButton(bitrate_radio)
         self.widgets.bitrate = QtWidgets.QComboBox()
         self.widgets.bitrate.addItems(recommended_bitrates)
-        self.widgets.bitrate.currentIndexChanged.connect(lambda: self.main.build_commands())
         self.widgets.bitrate.setCurrentIndex(6)
+        self.widgets.bitrate.currentIndexChanged.connect(lambda: self.mode_update())
+        self.widgets.custom_bitrate = QtWidgets.QLineEdit("3000")
+        self.widgets.custom_bitrate.setFixedWidth(100)
+        self.widgets.custom_bitrate.setDisabled(True)
         bitrate_box_layout.addWidget(bitrate_radio)
         bitrate_box_layout.addWidget(self.widgets.bitrate)
+        bitrate_box_layout.addWidget(QtWidgets.QLabel("Custom:"))
+        bitrate_box_layout.addWidget(self.widgets.custom_bitrate)
 
         crf_radio = QtWidgets.QRadioButton("CRF")
         crf_radio.setChecked(True)
@@ -103,11 +109,15 @@ class AV1(QtWidgets.QWidget):
 
         self.widgets.crf = QtWidgets.QComboBox()
         self.widgets.crf.addItems(recommended_crfs)
-        self.widgets.crf.setCurrentIndex(30)
-        self.widgets.crf.currentIndexChanged.connect(lambda: self.main.build_commands())
-
+        self.widgets.crf.setCurrentIndex(2)
+        self.widgets.crf.currentIndexChanged.connect(lambda: self.mode_update())
+        self.widgets.custom_crf = QtWidgets.QLineEdit("30")
+        self.widgets.custom_crf.setFixedWidth(100)
+        self.widgets.custom_crf.setDisabled(True)
         crf_box_layout.addWidget(crf_radio)
         crf_box_layout.addWidget(self.widgets.crf)
+        crf_box_layout.addWidget(QtWidgets.QLabel("Custom:"))
+        crf_box_layout.addWidget(self.widgets.custom_crf)
 
         bitrate_group_box.setLayout(bitrate_box_layout)
         crf_group_box.setLayout(crf_box_layout)
@@ -115,6 +125,11 @@ class AV1(QtWidgets.QWidget):
         layout.addWidget(crf_group_box, 0, 0)
         layout.addWidget(bitrate_group_box, 1, 0)
         return layout
+
+    def mode_update(self):
+        self.widgets.custom_crf.setDisabled(self.widgets.crf.currentText() != "Custom")
+        self.widgets.custom_bitrate.setDisabled(self.widgets.bitrate.currentText() != "Custom")
+        self.main.build_commands()
 
     def get_settings(self):
         settings = Box(disable_hdr=bool(self.widgets.remove_hdr.currentIndex()),)
